Header whitespace fix + about section start

--- a/src/Pages/Home/Components/Header/Header.css
+++ b/src/Pages/Home/Components/Header/Header.css
@@ -31,11 +31,14 @@
 .headerTitle
 {
 	padding-bottom: 20px;
+	font-size: calc(20px + 1.5vw);
 }
 
 .headerDescription
 {
 	padding-bottom: 30px;
+	font-size: calc(15px + .5vw);
+	width: 80%;
 }
 
 .headerActions
